--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vilas.task1">
 
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Task1">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="screenLayout|keyboardHidden|uiMode|screenSize|fontScale|locale|orientation"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,14 +28,12 @@
             </intent-filter>
         </activity>
         <receiver
-            android:name="AppReceiver"
+            android:name="com.vilas.task1.receiver.AppReceiver"
             android:enabled="true"
-            android:priority="0" >
+            android:priority="0">
             <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED" >
-                </action>
-                <action android:name="android.intent.action.PACKAGE_REMOVED" >
-                </action>
+                <action android:name="android.intent.action.PACKAGE_ADDED"/>
+                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
